masternode fix + dockerfile