@@ -1,16 +1,7 @@
 FROM openjdk:8-jre-alpine
-
-ENV APPLICATION_USER ktor
-RUN adduser -D -g '' $APPLICATION_USER
-
+ARG JAR_FILE
 RUN mkdir /app
-RUN chown -R $APPLICATION_USER /app
-
-USER $APPLICATION_USER
-
-COPY ./build/libs/Tx-nodes.jar /app/my-application.jar
+COPY $[JAR_FILE] /app/my-application.jar
 WORKDIR /app
-
 EXPOSE 7777 8777
-
-CMD ["java", "-server", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-XX:InitialRAMFraction=2", "-XX:MinRAMFraction=2", "-XX:MaxRAMFraction=2", "-XX:+UseG1GC", "-XX:MaxGCPauseMillis=100", "-XX:+UseStringDeduplication", "-jar", "my-application.jar"]
+CMD ["java", "-jar", "my-application.jar"]
